<resources>
    <!-- Build Strings -->

    <!-- Own Strings -->
    <string name="app_name">Funny Fart</string>


    <!-- Bottom Menu -->
    <string name="menu_database">Gespeicherte Fürze</string>
    <string name="menu_home">Neuen Furz berechnen</string>
    <string name="menu_help">Hilfe</string>
    <string name="menu_record">Fürze aufnehmen</string>


    <!-- Fragment Home -->
    <string name="home_title">Berechnen Sie, wie witzig ihr Furz ist.</string>

    <string name="txt_social_embarrassment">Peinlichkeitslevel</string>
    <string name="txt_gender_factor">Geschlecht der furzenden Person</string>

    <string name="btn_create_fart">Berechne neuen Furz</string>

    <string name="txt_intensity">Intensität</string>
    <string name="txt_length">Länge</string>
    <string name="txt_number_of_kids">Anwesende Kinder</string>
    <string name="hint_age_of_listener">Alter der Zuhörer</string>

    <string name="home_gender_female">Weiblich</string>
    <string name="home_gender_male">Männlich</string>


    <string name="error_empty_field">Geben Sie einen Wert ein.</string>
    <string name="error_toast_field">Es wurden nicht alle Felder ausgefüllt.</string>
    <string name="success_toast_field">Furz berechnen …</string>

    <!-- Fragment Database -->
    <string name="database_search">Furz suchen</string>
    <string name="database_sort_date">Datum</string>
    <string name="database_sort_name">Name</string>
    <string name="database_sort_score">Score</string>
    <string name="database_sort_success">Erfolgreich sortiert</string>
    <string name="database_delete_security_query_title">Furz löschen</string>
    <string name="database_delete_security_query_message">Sind Sie sicher, dass sie den Furz :name löschen möchten?</string>
    <string name="database_share_error">Ihre Audio konnte leider nicht gefunden werden!</string>
    <string name="card_template_date">Erstellt am:</string>
    <string name="card_template_score">Score:</string>
    <string name="card_template_image">Score Image</string>
    <string name="card_template_delete">Furz löschen</string>
    <string name="card_template_share">Falls eine Audio mit dem Furz verknüpft ist, können Sie diese in WhatsApp teilen!</string>
    <string name="card_template_play">Falls eine Audio mit dem Furz verknüpft ist, können Sie diese abspielen!</string>
    <string name="card_template_detail">Detailansicht</string>

    <!-- Fragment Detail -->
    <string name="detail_title">So witzig ist Ihr Furz:</string>
    <string name="detail_intensity">Intensität: </string>
    <string name="detail_length">Länge: </string>
    <string name="detail_social_embarrassment">Peinlichkeitslevel: </string>
    <string name="detail_number_kids">Anwesende Kinder: </string>
    <string name="detail_age_listener">ø-Alter der Zuhörer: </string>
    <string name="detail_gender_factor">Geschlecht: </string>
    <string name="detail_input_title">Ihre Eingaben:</string>
    <string name="detail_form_title">Speichern Sie Ihr Ergebnis:</string>
    <string name="detail_hint_fart_name">Name des Furzes</string>
    <string name="detail_btn_save_fart">Furz speichern</string>
    <string name="detail_toast_success">Furz erfolgreich gespeichert.</string>
    <string name="detail_toast_error">Furz konnte nicht gespeichert werden. Bitte versuchen Sie es erneut!</string>
    <string name="detail_intensity_value">%1$s db</string>
    <string name="detail_length_value">%1$s Sekunde(n)</string>
    <string name="detail_gender_factor_value">%1$s, %2$s</string>
    <string name="detail_formula">\$\$\\color{white}{\\frac{(%1$s * %2$s)^%3$s * %4$s}{(%5$s * %6$s)} = %7$s}\$\$</string>

    <!-- Fragment Help -->
    <string name="help_title">Die Formel</string>
    <string name="help_description">
        Die Formel für den witzigsten Furz der Welt wurde von Beano in Zusammenarbeit von mit Dr. Helen Pitcher und Voice-Over-Artist Grant Leat erstellt. Sie haben untersucht, warum Blähungen für uns Menschen so witzig sein können.
        Dabei haben Sie 176 verschiedene Furzgeräusche untersucht. Diese reichen von niedriger bis hoher Intensität, von kurz bis lang, von trocken bis feucht, von laut bis flatternd.
        Das Ergebnis der wissenschaftlichen Studien ist, dass der witzigste Furz lang, laut und feucht ist.
        Wenn du selbst entscheiden möchtest, was der witzigste Furz ist, dann kannst auf der Startseite loslegen!
    </string>
    <string name="help_formula">\$\$\\color{white}{\\frac{(I * L)^S * K}{(A * g)} = F}\$\$</string>
    <string name="help_parameters">Parameter</string>
    <string name="help_i">I: Intensität des Furzes in Dezibel (dB) </string>
    <string name="help_l">L: Länge des Furzes in Sekunden (s) </string>
    <string name="help_s">S: Peinlichkeit in einer Skala von 1 bis 3 </string>
    <string name="help_k">K: Anzahl an Kindern, die den Furz gehört haben </string>
    <string name="help_a">A: Durchschnittsalter der Zuhörer in Jahren </string>
    <string name="help_g">g: Geschlecht des Täters (männlich oder weiblich) </string>
    <string name="help_result">Ergebnis</string>
    <string name="help_f">F beschreibt als Ergebniswert, wie witzig der Furz zu bewerten ist. \nEs gilt: Je höher der Wert, desto witziger!</string>
    <string name="help_origin_title">Quellen</string>
    <string name="help_origin_text">
        <a href="https://www.beano.com/posts/the-worlds-funniest-fart">https://www.beano.com/posts/the-worlds-funniest-fart</a>\n\n
        <a href="https://www.itv.com/news/2019-08-21/formula-for-worlds-funniest-fart-revealed/">https://www.itv.com/news/2019-08-21/formula-for-worlds-funniest-fart-revealed/</a>\n
        <a href="https://www.thesun.co.uk/tech/9765024/flatulence-formula-worlds-funniest-fart/">https://www.thesun.co.uk/tech/9765024/flatulence-formula-worlds-funniest-fart/</a>
    </string>
    <string name="help_packages_title">Verwendete Bibliotheken und Ressourcen</string>
    <string name="help_packages_text">
        Diese App benutzt folgende Bibliotheken: \n\n
        &#8226; ElegantNumberButton: <a href="https://github.com/ashik94vc/ElegantNumberButton">https://github.com/ashik94vc/ElegantNumberButton</a>\n
        &#8226; MathView: <a href="https://github.com/jianzhongli/MathView">https://github.com/jianzhongli/MathView</a>\n\n
        Diese Bibliotheken verwenden die Apache  License 2.0 (siehe: <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">http://www.apache.org/licenses/LICENSE-2.0.txt</a>\n\n
        Eine Kopie der Apache License und der Quellcode der App kann im GitHub-Repository (siehe: <a href="https://github.com/AnsgarLichter/funny-fart">https://github.com/AnsgarLichter/funny-fart</a>) eingesehen werden.
    </string>
    <string name="help_privacy_policy">
        Hier können Sie unserer Datenschutzerklärung finden: <a href="https://funnyfart.markusscheuring.de/">https://funnyfart.markusscheuring.de/</a> \n
    </string>

    <!-- Fragment Record -->
    <string name="recording_started">Aufnahme gestartet</string>
    <string name="recording_finished">Aufnahme beendet</string>
    <string name="file_created">Audio-Datei konnte nicht erstellt werden. Bitte rufen Sie die Seite erneut auf.</string>
    <string name="permissions_not_granted">Um Fürze aufnehmen zu können, müssen Sie die Berechtigungen gewähren</string>
</resources>
