<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <!-- Register Fragments -->
    <fragment
        android:id="@+id/nav_home"
        android:name="dhbw.lichter.scheuring.formelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_database"
        android:name="dhbw.lichter.scheuring.formelapp.ui.database.DatabaseFragment"
        android:label="@string/menu_database"
        tools:layout="@layout/fragment_database" />

    <fragment
        android:id="@+id/nav_help"
        android:name="dhbw.lichter.scheuring.formelapp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_record"
        android:name="dhbw.lichter.scheuring.formelapp.ui.record.RecordFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_record" />

</navigation>